# Copi

./: .gitignore  ENHANCEMENT_PROMPT.md  LICENSE  README.md  build_plan_for_sync.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: releases.md
scripts/: release-check.mjs  release-version.mjs  run-sync-qa-once.sh  sync-metadata-qa.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  collections.rs  db.rs  embed.rs  hotkey.rs  macos.rs  main.rs  model_setup.rs  ocr.rs  privacy.rs  qa_sync.rs  query_parser.rs  search.rs  settings.rs  sync.rs  wormhole.rs
src-tauri/src/centroids/: auth_search.rs  code_search.rs  error_search.rs  image_search.rs  meeting_search.rs  mod.rs  recipe_search.rs  url_search.rs
src-tauri/src/sync/: device.rs  discovery.rs  engine.rs  mod.rs  pairing.rs  protocol.rs  runtime.rs  transport.rs
src/components/: ErrorBoundary.tsx  Picker.tsx
src/hooks/: useKeyboard.ts  useSearch.ts  useTheme.ts
src/overlay/: ActionsSheet.tsx  CollectionSidebar.tsx  DetailPanel.tsx  Overlay.tsx  ResultRow.tsx  ResultsList.tsx  SearchBar.tsx  StatusBar.tsx  clipMediaCache.ts
src/settings/: Settings.tsx
src/setup/: Setup.tsx
src/setup/animations/: LogoAssembly.tsx  Particles.tsx  ProgressWave.tsx  SuccessBurst.tsx  TypeWriter.tsx  index.ts
src/utils/: platform.ts  transforms.ts  updater.ts
src/wormhole/: Wormhole.tsx
wix/: firewall-hooks.nsh  firewall.wxs
