[package]
name = "copi"
version = "0.5.13"
edition = "2021"
rust-version = "1.88"
authors = ["Pixlox"]
description = "Copi"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-global-shortcut = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
sqlite-vec = "0.1.7"
zerocopy = "0.8"

arboard = "3.6"
sha2 = "0.10"
hex = "0.4"
regex = "1"
png = "0.17"
chrono = { version = "0.4", features = ["serde"] }

tokio = { version = "1", features = ["full"] }
window-vibrancy = "0.6"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

ort = { version = "=2.0.0-rc.12", features = ["download-binaries"] }
tokenizers = { version = "=0.20.4", default-features = false, features = ["onig"] }

syntect = "5"

# Caching and performance
lru = "0.16"

# LAN sync dependencies
mdns-sd = "0.11"                    # mDNS service discovery (Bonjour/Avahi)
uuid = { version = "1", features = ["v4"] }  # Sync IDs
base64 = "0.22"                     # Base64 encoding for mDNS TXT records
gethostname = "1.1"                 # Get device hostname
anyhow = "1"
chacha20poly1305 = { version = "0.10", features = ["std"] }
hkdf = "0.12"
x25519-dalek = { version = "2", features = ["static_secrets"] }
rand = "0.10"
dirs = "5"                          # Platform-specific directories (for Downloads folder)

# Desktop-only plugins
[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"

# macOS: NSPanel for fullscreen overlay (EcoPaste pattern — v2.1 branch)
[target."cfg(target_os = \"macos\")".dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }
cidre = { version = "0.9.0", default-features = false, features = ["cf", "cg", "cv", "cm", "ns", "objc", "vn", "blocks", "macos_13_0"] }
# Relax-sign-encoding prevents PAC crash on macOS 26 Tahoe
objc2 = { version = "0.6.1", features = ["relax-sign-encoding"] }
objc2-app-kit = { version = "0.3.2", features = ["NSBitmapImageRep", "NSImage", "NSPasteboard", "NSPasteboardItem", "NSRunningApplication", "NSWorkspace"] }
objc2-foundation = { version = "0.3.2", features = ["NSData", "NSDictionary", "NSGeometry", "NSString", "NSURL", "objc2-core-foundation"] }
core-graphics = "0.25"

[target."cfg(target_os = \"windows\")".dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_Storage_FileSystem", "Win32_System_DataExchange", "Win32_System_Threading", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Shell", "Win32_UI_Shell_Common", "Win32_UI_WindowsAndMessaging"] }
windows-core = "0.61"
windows = { version = "0.61", features = [
    "Foundation",
    "Foundation_Collections",
    "Globalization",
    "Graphics_Imaging",
    "Media_Ocr",
    "Storage_Streams",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

















